apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    network-dns-egress: "true"
    network-monitoring-ingress: "true"
    network-world-egress: "true"
