apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        nvidia.com/gpu.present: "true"
      runtimeClassName: nvidia
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "4"
              memory: "8Gi"
              nvidia.com/gpu: "1"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
              subPath: config
            - name: jellyfin-data
              mountPath: /cache
              subPath: cache
            - name: jellyfin-media
              mountPath: /media
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
