apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 80
      targetPort: 8096
